# DesignPattern

Adapter/Adapter/: CMakeLists.txt  main.cpp
Bridge/Bridge/: CMakeLists.txt  main.cpp
Bridge/Pimpl Idiom/: CMakeLists.txt  Person.cpp  Person.hpp  foo.cpp  foo.hpp  pimpl.cpp  pimpl.hpp
Builder/: main.cpp
Builder/Builder Facets/: CMakeLists.txt  Person.cpp  Person.hpp  PersonAddressBuilder.cpp  PersonAddressBuilder.hpp  PersonBuilder.cpp  PersonBuilder.hpp  PersonJobBuilder.cpp  PersonJobBuilder.hpp  main.cpp
Builder/Groovy-style builder/: CMakeLists.txt  main.cpp
Builder/test_prj/: CMakeLists.txt  main.cpp
Chain of Responsibility/Broker Chain/: CMakeLists.txt  main.cpp
Chain of Responsibility/Pointer Chain/: CMakeLists.txt  main.cpp
Command/Command/: CMakeLists.txt  main.cpp
Composite/Array-Backed properties/: CMakeLists.txt  main.cpp
Composite/Geometric Shapes/: CMakeLists.txt  main.cpp
Composite/Neural Network/: CMakeLists.txt  main.cpp
Decorator/Dynamic Decorator/: CMakeLists.txt  main.cpp
Decorator/Functional Decorator/: CMakeLists.txt  main.cpp
Decorator/Static Decorator/: CMakeLists.txt  main.cpp
Facade/: CMakeLists.txt  main.cpp
Factories/Abstract Factory/: CMakeLists.txt  (+4 more)
Memento/: CMakeLists.txt  main.cpp
Observer/: CMakeLists.txt  Observable.cpp  Observable.hpp  Observer.cpp  Observer.hpp  main.cpp
Prototype/Prototype Factory/: CMakeLists.txt  main.cpp
Proxy/: CMakeLists.txt
SOLID/: CMakeLists.txt  main.cpp
Strategy/: CMakeLists.txt  main.cpp
Template/: CMakeLists.txt  main.cpp
test_async/: CMakeLists.txt  main.cpp
(+41 files in other folders)
